--- a/retsful-dms-api/src/main/resources/messages.properties
+++ b/retsful-dms-api/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
-hello=hello!
-welcome=Welcome to this guide!
+userNotFoundExceptionMessage=There was a problem with your authentication. Couldn't find user with given username.
+existingUserEmailExceptionMessage=User with that email already exists.
+existingUserExceptionMessage=User with that username already exists.
 
