Add all exceptions translations

--- a/retsful-dms-api/src/main/resources/messages_en.properties
+++ b/retsful-dms-api/src/main/resources/messages_en.properties
@@ -2,3 +2,4 @@ userNotFoundExceptionMessage=There was a problem with your authentication. Could
 existingUserEmailExceptionMessage=User with that email already exists.
 existingUserExceptionMessage=User with that username already exists.
 documentNotFoundExceptionMessage=Could not find document with given id= {0}
+parsingUserDataExceptionMessage=Error parsing application user data
