--- a/retsful-dms-api/src/main/resources/messages_pl.properties
+++ b/retsful-dms-api/src/main/resources/messages_pl.properties
@@ -1,6 +1,5 @@
-# Polish translations aren't use for now.
 userNotFoundExceptionMessage=Wystąpił problem z uwierzytelnieniem. Użytkownik o podanej nazwie nie istnieje.
 existingUserEmailExceptionMessage=Użytkownik z podanym adresem e-mail już istnieje.
 existingUserExceptionMessage=Użytkownik o podanej nazwie już istnieje.
 documentNotFoundExceptionMessage=Nie znaleziono dokumentu o podanym id= {0}
-
+parsingUserDataExceptionMessage=Wystąpił błąd podczas parsowania danych użytkownika
