--- a/restful-dms-ui/src/assets/i18n/en.json
+++ b/restful-dms-ui/src/assets/i18n/en.json
@@ -68,10 +68,10 @@
     "titleRequired": "Title is required",
     "titleMin": "Title must be at least 3 characters long",
     "titleMax": "Title must be at most 50 characters long",
-    "brief": "Brief desription",
-    "briefRequired": "Brief desription is required",
-    "briefMin": "Brief desription must be at least 3 characters long",
-    "briefMax": "Brief desription must be at most 50 characters long",
+    "brief": "Brief description",
+    "briefRequired": "Brief description is required",
+    "briefMin": "Brief description must be at least 3 characters long",
+    "briefMax": "Brief description must be at most 50 characters long",
     "description": "Description",
     "descriptionMax": "Description must be at most 255 characters long",
     "fileInvalidFormat": "File must be a PDF",
