Add interceptor angular error handling

--- a/restful-dms-ui/src/assets/i18n/en.json
+++ b/restful-dms-ui/src/assets/i18n/en.json
@@ -7,7 +7,8 @@
     "loading": "Loading...",
     "ok": "OK",
     "unexpectedErrorTitle": "An unexpected error occurred",
-    "unexpectedErrorMsg": "Please try again later."
+    "tryAgainLaterErrorMsg": "Please try again later.",
+    "offlineErrorTitle": "The server is currently offline."
   },
   "login": {
     "signUp": "Sign up",
